--- a/GameProject/history.txt
+++ b/GameProject/history.txt
@@ -8,25 +8,39 @@
 
 []HUD設計
 
-[]敵人物件
-
 []傷害文字處理 Sprite
 []傷害事件
+
+[]敵人物件
 
 []物品與場景物件設計
 []物品掉落動畫
 []物件控制管理員 場景物件
 
-
 []事件控制器 結束與開始點
-[]過場動畫 上下黑幕
-[]場景動畫 震動
 
 []可動式背景 offset的調整
 
 []物件控制管理員 前景物件
 []角色動畫的順序與控制
 
+[]場景動畫 震動 對攝影機
+
+---
+2019/02/11
+
+[D]調整Stage舞台撥放器作為類別使用 & 管理
+	新增: 對話 電影風格黑視窗
+[D]重設座標與大小的計算
+[N]以Gdx.graphics.getHeight() & getWidth取得實際視窗大小 : int
+
+[N]全域變數增加 ASSETMANAGER 依據需求來IMPORT取用該物件或是全部的物件
+	該物件讀取需依靠使用ASSETMANAGER, 其路徑也在此編輯 
+
+---
+2019/01/30
+[P]過場動畫 上下黑幕
+[W]重設座標與大小的計算 2019/02/11
 
 ---
 2019/01/25
