--- a/GameProject/history.txt
+++ b/GameProject/history.txt
@@ -13,18 +13,25 @@
 
 []敵人物件
 
+[]特效物件管理器
+[]特效物件生成 落地時產生煙霧等
+
 []物品與場景物件設計
 []物品掉落動畫
 []物件控制管理員 場景物件
 
 []事件控制器 結束與開始點
-
 []可動式背景 offset的調整
 
 []物件控制管理員 前景物件
+
 []角色動畫的順序與控制
 
-[]場景動畫 震動 對攝影機
+---
+2019/02/13
+
+[D]狀態中落點與穿越的判定
+[D]場景動畫 震動 對攝影機
 
 ---
 2019/02/11
